--- a/less/blocks/index.less
+++ b/less/blocks/index.less
@@ -5,7 +5,7 @@
 .header {
   display: flex;
   flex-direction: column;
-  padding-bottom: 113px;
+  padding-bottom: 150px;
 }
 
 .ad-list-items {
@@ -15,10 +15,8 @@
   margin: auto;
   list-style: none;
   margin-top: 100px;
-  margin-bottom: 40px;
-  background: #fff;
+  margin-bottom: 40px;  
   width: 700px;
-  border: 2px solid rgba(0,0,0, 0.2);
 }
 
 .ad-list-items__item {
@@ -29,8 +27,7 @@
 .ad-list-items__link {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  border: 3px solid #000;
+  text-align: center;  
   transition: 0.2s ease-out;
   text-decoration: none;
 }
@@ -39,10 +36,13 @@
   box-shadow: 0px 0px 9px 6px rgba(0,0,0, 0.4);
 }
 
-.ad-list-items__text {
-  background: #000;
+.ad-list-items__text {  
   padding: 2px;
-  color: #fff;
+  color: #000;
+  border-bottom: 2px solid #000;
+  background: #fff;
+  font-family: monospace;
+  font-size: 16px;
 }
 
 .list-items {   
@@ -51,26 +51,23 @@
   justify-content: center;
   width: 700px;
   margin: auto;    
-  list-style: none;
-  background: #fff;
-  border: 2px solid rgba(0,0,0, 0.2);
-  padding: 20px;
+  list-style: none;  
+  padding: 20px;  
 }
 
 .list-items__item {      
   margin-bottom: 20px;
   margin-right: 20px;
+  border-bottom: 2px solid #000;
 }
 
 .list-items__link {  
-  display: flex;  
-  border: 2px solid #000;  
+  display: flex;    
   flex-direction: column;  
   text-align: center;
   width: 100%;  
   text-decoration: none;
-  color: aliceblue;    
-  z-index: 10;
+  color: #fff;
   transition: 0.2s ease-out;
 }
 
@@ -78,8 +75,15 @@
   box-shadow: 0px 0px 7px 5px rgba(0,0,0, 0.4);
 }
 
-.list-items__text {
-  background: rgba(0,0,0, 0.7);
+.list-items__text {  
+  color: #000;
   padding: 2px;
+  transition: 0.3s ease-out;
+  background: #fff;
+  font-family: monospace;
+  font-size: 16px;
+}
+.list-items__link:hover .list-items__text {
+  opacity: 1;
 }
 
