--- a/less/blocks/index.less
+++ b/less/blocks/index.less
@@ -1,3 +1,9 @@
+@font-face {
+  src: url(../fonts/OpenSans.woff), url(../fonts/OpenSans.woff2);
+  font-family: OpenS;
+}
+
+
 .container { 
   background: linear-gradient(180deg, #f1f5f7 0%, #A9A9A9 80%)no-repeat;  
 }
@@ -41,7 +47,7 @@
   color: #000;
   border-bottom: 2px solid #000;
   background: #fff;
-  font-family: monospace;
+  font-family: OpenS;
   font-size: 16px;
 }
 
@@ -80,7 +86,7 @@
   padding: 2px;
   transition: 0.3s ease-out;
   background: #fff;
-  font-family: monospace;
+  font-family: OpenS;
   font-size: 16px;
 }
 .list-items__link:hover .list-items__text {
