--- a/pages/pink/css/style.css
+++ b/pages/pink/css/style.css
@@ -647,6 +647,12 @@ textarea {
   padding: 15px;
   text-align: center;
   width: 280px;
+  cursor: pointer;
+}
+.d-load__link:hover {
+  background: #fff;
+  color: #283645;
+  text-decoration: none;
 }
 .d-load__items {
   display: flex;
@@ -982,6 +988,10 @@ textarea {
   margin-top: 0px;
 }
 .map__google-map {
+  height: 306px;
+}
+.map iframe {
+  width: 100%;
   height: 306px;
 }
 .title-block {
@@ -2011,6 +2021,9 @@ textarea {
   }
   .map {
     margin-top: 60px;
+  }
+  .map iframe {
+    height: 400px;
   }
   .map__google-map {
     height: 400px;
